@@ -15,6 +15,12 @@ New in spot 2.7.2.dev (not yet released)
     'ltldo ltl2dstar -f 'GFa -> GFb' | autfilt --small' produces 1
     state instead of 4.)
 
+  Bugs fixed:
+
+  - When processing CSV files with MSDOS-style \r\n line endings,
+    --stats would output the \r as part of the %> sequence instead
+    of ignoring it.
+
 New in spot 2.7.2 (2019-03-17)
 
   Python:
